--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "bin": {
-    "persistica": "index.js"
-  },
-  "type": "module",
-  "name": "persistica",
-  "version": "0.0.0",
-  "description": "Persistica",
-  "main": "./index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rujorgensen/persistica.git"
-  },
-  "author": "pixl.prophet",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rujorgensen/persistica/issues"
-  },
-  "homepage": "https://github.com/rujorgensen/persistica#readme",
-  "dependencies": {
-    "yargs": "^17.7.2",
-    "ws": "8.18.0"
-  },
-  "devDependencies": {
-    "@types/ws": "8.5.12",
-    "jest": "29.7.0"
-  }
+    "bin": {
+        "persistica": "index.js"
+    },
+    "type": "module",
+    "name": "persistica",
+    "version": "0.0.0",
+    "description": "Persistica",
+    "main": "./index.ts",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/rujorgensen/persistica.git"
+    },
+    "author": "pixl.prophet",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/rujorgensen/persistica/issues"
+    },
+    "homepage": "https://github.com/rujorgensen/persistica#readme",
+    "dependencies": {
+        "rxjs": "^7.8.1",
+        "ws": "8.18.0",
+        "yargs": "^17.7.2"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "1.9.4",
+        "@types/ws": "8.5.12",
+        "jest": "29.7.0"
+    }
 }
