--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "dependencies": {
         "rxjs": "^7.8.1",
         "ws": "8.18.0",
-        "yargs": "^17.7.2"
+        "yargs": "^17.7.2",
+        "nanoid": "3.3.7",
+        "object-hash": "3.0.0"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
-        "@types/ws": "8.5.12",
+        "@types/ws": "8.5.13",
         "jest": "29.7.0"
     }
 }
