--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "description": "Persistica",
     "main": "./index.ts",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "bun test"
     },
     "repository": {
         "type": "git",
@@ -21,15 +21,22 @@
     },
     "homepage": "https://github.com/rujorgensen/persistica#readme",
     "dependencies": {
+        "@hirez_io/observer-spy": "^2.2.0",
+        "fake-indexeddb": "^6.0.0",
+        "nanoid": "3.3.7",
+        "object-hash": "3.0.0",
         "rxjs": "^7.8.1",
         "ws": "8.18.0",
-        "yargs": "^17.7.2",
-        "nanoid": "3.3.7",
-        "object-hash": "3.0.0"
+        "yargs": "^17.7.2"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
         "@types/ws": "8.5.13",
-        "jest": "29.7.0"
+        "bun": "^1.1.43",
+        "jest": "29.7.0",
+        "@types/bun": "^1.1.16"
+    },
+    "peerDependencies": {
+        "typescript": "^5.0.0"
     }
 }
