--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,19 @@
 {
     "extends": "../../../tsconfig.base.json",
     "compilerOptions": {
+        "baseUrl": ".",
         "module": "commonjs",
         "forceConsistentCasingInFileNames": true,
         "noImplicitOverride": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "noPropertyAccessFromIndexSignature": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "paths": {
+            "@persistica/core": [
+                "src/lib/core/index.ts"
+            ]
+        }
     },
     "files": [],
     "include": [],
