--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,11 +5,11 @@
         "module": "commonjs",
         "types": [
             "jest",
-            "node"
+            "node",
+            "bun"
         ]
     },
     "include": [
-        "jest.config.ts",
         "src/**/*.test.ts",
         "src/**/*.spec.ts",
         "src/**/*.d.ts"
