refactor: clean up code and improve type handling; update imports and logging

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../../tsconfig.base.json",
     "compilerOptions": {
+        "target": "ESNext",
         "baseUrl": ".",
         "module": "commonjs",
         "forceConsistentCasingInFileNames": true,
