--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
         "@types/ws": "8.5.14",
+        "@types/bun": "^1.1.16",
         "bun": "^1.1.43",
         "jest": "29.7.0",
-        "@types/bun": "^1.1.16"
+        "mock-socket": "^9.3.1"
     },
     "peerDependencies": {
         "typescript": "^5.0.0"
