--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "description": "Persistica",
     "main": "./index.ts",
     "scripts": {
+        "upd": "ncu -i --format group",
         "test": "bun test"
     },
     "repository": {
@@ -22,6 +23,7 @@
     "homepage": "https://github.com/rujorgensen/persistica#readme",
     "dependencies": {
         "@hirez_io/observer-spy": "^2.2.0",
+        "bufferutil": "^4.0.9",
         "fake-indexeddb": "^6.0.0",
         "nanoid": "3.3.7",
         "object-hash": "3.0.0",
@@ -32,8 +34,8 @@
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
         "@types/ws": "8.5.14",
-        "@types/bun": "^1.1.16",
-        "bun": "^1.1.43",
+        "@types/bun": "^1.2.2",
+        "bun": "^1.2.2",
         "jest": "29.7.0",
         "mock-socket": "^9.3.1"
     },
