--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "main": "./index.ts",
     "scripts": {
         "upd": "ncu -i --format group",
-        "test": "bun test"
+        "test": "vitest",
+        "knip": "knip"
     },
     "repository": {
         "type": "git",
@@ -28,18 +29,22 @@
         "nanoid": "3.3.7",
         "object-hash": "3.0.0",
         "rxjs": "^7.8.1",
+        "vite-tsconfig-paths": "^5.1.4",
         "ws": "8.18.0",
         "yargs": "^17.7.2"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
-        "@types/ws": "8.5.14",
         "@types/bun": "^1.2.2",
+        "@types/node": "^22.13.4",
+        "@types/ws": "8.5.14",
         "bun": "^1.2.2",
         "jest": "29.7.0",
-        "mock-socket": "^9.3.1"
+        "knip": "^5.44.1",
+        "mock-socket": "^9.3.1",
+        "vitest": "^3.0.5"
     },
     "peerDependencies": {
-        "typescript": "^5.0.0"
+        "typescript": "^5.7.3"
     }
 }
