refactor: update interfaces and improve type safety; remove console logs and enhance error handling

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "scripts": {
         "upd": "ncu -i --format group",
         "test": "vitest",
-        "knip": "knip"
+        "knip": "knip",
+        "lint": "biome lint ./src",
+        "lint-fix": "biome lint --write --unsafe ./src"
     },
     "repository": {
         "type": "git",
