Add support for stores

--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
     "bin": {
-        "persistica": "index.js"
+        "persistica": "./src/index.ts"
     },
     "type": "module",
     "name": "persistica",
-    "version": "0.0.0",
+    "version": "0.1.0",
     "description": "Persistica",
-    "main": "./index.ts",
+    "main": "./src/index.ts",
     "scripts": {
         "upd": "ncu -i --format group",
         "test": "vitest",
         "knip": "knip",
         "lint": "biome lint ./src",
+        "link": "npm link",
         "lint-fix": "biome lint --write --unsafe ./src"
     },
     "repository": {
@@ -27,13 +28,15 @@
     "dependencies": {
         "@hirez_io/observer-spy": "^2.2.0",
         "bufferutil": "^4.0.9",
+        "citty": "^0.1.6",
+        "consola": "^3.4.0",
         "fake-indexeddb": "^6.0.0",
         "nanoid": "3.3.7",
         "object-hash": "3.0.0",
+        "persistica": "link:persistica",
         "rxjs": "^7.8.1",
         "vite-tsconfig-paths": "^5.1.4",
-        "ws": "8.18.1",
-        "yargs": "^17.7.2"
+        "ws": "8.18.1"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
