--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
     "compilerOptions": {
         "target": "ESNext",
         "baseUrl": ".",
-        "module": "commonjs",
+        "module": "nodenext",
         "forceConsistentCasingInFileNames": true,
         "noImplicitOverride": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "noPropertyAccessFromIndexSignature": true,
         "esModuleInterop": true,
+        "strict": true,
         "paths": {
             "@persistica/core": [
                 "src/lib/core/index.ts"
