--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "main": "./src/index.ts",
     "scripts": {
         "upd": "ncu -i --format group",
+        "demo": "rm -rf ./demo/dist && bun run bun ./demo/build.js && bun run ./demo/server.ts",
         "test": "vitest",
         "knip": "knip",
         "lint": "biome lint ./src",
@@ -34,20 +35,20 @@
         "nanoid": "3.3.7",
         "object-hash": "3.0.0",
         "persistica": "link:persistica",
-        "rxjs": "^7.8.1",
+        "rxjs": "^7.8.2",
         "vite-tsconfig-paths": "^5.1.4",
         "ws": "8.18.1"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
-        "@types/bun": "^1.2.2",
-        "@types/node": "^22.13.4",
+        "@types/bun": "^1.2.3",
+        "@types/node": "^22.13.5",
         "@types/ws": "8.5.14",
-        "bun": "^1.2.2",
+        "bun": "^1.2.3",
         "jest": "29.7.0",
-        "knip": "^5.44.1",
+        "knip": "^5.44.5",
         "mock-socket": "^9.3.1",
-        "vitest": "^3.0.5"
+        "vitest": "^3.0.6"
     },
     "peerDependencies": {
         "typescript": "^5.7.3"
