--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "main": "./src/index.ts",
     "scripts": {
         "upd": "ncu -i --format group",
-        "demo": "rm -rf ./demo/dist && bun run bun ./demo/build.js && bun run ./demo/server.ts",
+        "demo": "bun run ./demo/demo.ts",
+        "dev": "bun run ./dev.ts",
         "test": "vitest",
         "knip": "knip",
         "lint": "biome lint ./src",
@@ -28,6 +29,7 @@
     "homepage": "https://github.com/rujorgensen/persistica#readme",
     "dependencies": {
         "@hirez_io/observer-spy": "^2.2.0",
+        "alpinejs": "latest",
         "bufferutil": "^4.0.9",
         "citty": "^0.1.6",
         "consola": "^3.4.0",
@@ -41,14 +43,14 @@
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
-        "@types/bun": "^1.2.3",
-        "@types/node": "^22.13.5",
+        "@types/bun": "^1.2.4",
+        "@types/node": "^22.13.8",
         "@types/ws": "8.5.14",
-        "bun": "^1.2.3",
+        "bun": "^1.2.4",
         "jest": "29.7.0",
-        "knip": "^5.44.5",
+        "knip": "^5.45.0",
         "mock-socket": "^9.3.1",
-        "vitest": "^3.0.6"
+        "vitest": "^3.0.7"
     },
     "peerDependencies": {
         "typescript": "^5.7.3"
