--- a/package.json
+++ b/package.json
@@ -38,23 +38,38 @@
     "object-hash": "3.0.0",
     "persistica": "link:persistica",
     "rxjs": "^7.8.2",
+    "tslib": "^2.3.0",
     "vite-tsconfig-paths": "^5.1.4",
     "ws": "8.18.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@nx/esbuild": "20.7.2",
+    "@nx/jest": "20.7.2",
+    "@nx/js": "20.7.2",
+    "@nx/vite": "20.7.2",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
     "@types/alpinejs": "^3.13.11",
     "@types/bun": "1.2.9",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.14.0",
     "@types/ws": "8.18.1",
     "alpinejs": "latest",
     "bun": "1.2.9",
+    "esbuild": "^0.19.2",
     "jest": "29.7.0",
+    "jest-environment-node": "^29.7.0",
     "knip": "^5.50.2",
     "mock-socket": "^9.3.1",
-    "vitest": "^3.1.1",
     "nx": "20.7.2",
-    "@nx/vite": "20.7.2"
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.7.2",
+    "verdaccio": "^6.0.5",
+    "vitest": "^3.1.1"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
