--- a/packages/flux/agent/package.json
+++ b/packages/flux/agent/package.json
@@ -1,10 +1,25 @@
 {
-    "name": "@persistica/flux/agent",
-    "version": "0.0.1",
-    "type": "module",
-    "main": "./index.cjs",
-    "types": "./index.d.ts",
-    "dependencies": {
-        "alpinejs": "^3.14.9"
-    }
+  "name": "@persistica/flux-agent",
+  "version": "0.0.1",
+  "description": "Persistica Flux Agent",
+  "type": "module",
+  "keywords": [],
+  "publishConfig": {
+    "access": "public"
+  },
+  "main": "./index.cjs",
+  "types": "./index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rujorgensen/persistica.git"
+  },
+  "author": "pixl.prophet",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rujorgensen/persistica/issues"
+  },
+  "homepage": "https://github.com/rujorgensen/persistica#readme",
+  "dependencies": {
+    "alpinejs": "^3.14.9"
+  }
 }
